fixes #636 changes to fix dropdown caret alignment issues in firefox.

--- a/src/client/flogo/app/app-detail/app-detail.component.less
+++ b/src/client/flogo/app/app-detail/app-detail.component.less
@@ -329,11 +329,13 @@
 }
 
 .views-dropdown_button {
+  position: relative;
   text-align: left;
   margin: 0 15px 0 0;
 }
 
 .views-dropdown_caret {
-  position: relative;
-  top: 9px;
+  position: absolute;
+  top: 16px;
+  right: 16px;
 }
