--- a/src/client/flogo/flow/params-schema/param-row/param-row.component.less
+++ b/src/client/flogo/flow/params-schema/param-row/param-row.component.less
@@ -45,12 +45,13 @@
   width: 100%;
   text-align: left;
   height: 45px;
+  position: relative;
 }
 
 .type-selector__caret {
-  float: right;
-  position: relative;
-  top: 9px;
+  position: absolute;
+  top: 22px;
+  right: 22px;
 }
 
 .type-selector__dropdown-menu {
